--- a/.github/workflows/master_lojavirtual-rm558881.yml
+++ b/.github/workflows/master_lojavirtual-rm558881.yml
@@ -2,7 +2,8 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - lojavirtual-rm558881
+name: Update main_lojavitual1.yml
+
 
 on:
   push:
